fix grammar in introduction.mdx

--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -32,7 +32,7 @@ If you need more personalized help, visit our [forums](https://forums.runtipi.io
 <Cards>
   <Cards.Card
     icon={<LightBulbIcon />}
-    title="Why using Runtipi?"
+    title="Why use Runtipi?"
     href="/docs/getting-started/why-runtipi"
   />
   <Cards.Card
