--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -38,7 +38,7 @@ If you need more personalized help, visit our [forums](https://forums.runtipi.io
   <Cards.Card
     icon={<LightBulbIcon />}
     title="Apps available"
-    href="/docs/getting-started/apps-available"
+    href="/docs/apps-available"
   />
   <Cards.Card
     icon={<WrenchIcon />}
