Add selective apps list

--- a/src/content/docs/guides/auto-backup-apps.mdx
+++ b/src/content/docs/guides/auto-backup-apps.mdx
@@ -8,7 +8,7 @@ new backup feature.
 Thanks a lot to [Lancelot-Enguerrand](https://github.com/Lancelot-Enguerrand) for putting this script together.
 
 <Callout type="warning">
-  This script requires Runtipi verion `v4.0.0` or above.
+  This script requires Runtipi version `v4.0.0` or above.
 </Callout>
 
 ## Setup
@@ -28,6 +28,9 @@ called `backup-apps.sh` and paste the following code:
  
 # Specify your runtipi base path
 runtipiPath=""
+ 
+# Specify path to you backup reference list (optional)
+backupListPath=""
  
 # Storage path for the Apps
 backupPath="$runtipiPath/backups"
@@ -90,84 +93,107 @@ case "$backupType" in
         exit 2
         ;;
 esac
- 
+
+# Check Runtipi version
+runtipiVersion=$(cat $runtipiPath/VERSION)
+runtipiMajorVersion=$(echo $runtipiPath | cut -d. -f1 VERSION | sed 's/^v//')
+if [ "$major_version" -lt 4 ]; then
+    echo "Runtipi version is $runtipiVersion, this script require at least v4.0.0"
+    exit 4
+fi
+
 # Should Apps be stopped during backup
 stopApp="${2:-$stopAppDefaultValue}"
 
 # List all appstores
 for appStore in $(ls $appsPath)
 do
+    # Check optional apps reference list
+    refBackupList=$backupListPath
+    if [ -z "$refBackupList" ]; then
+        backupList=$(ls $appsPath/$appStore)
+    elif [ -f "$refBackupList" ]; then
+        backupList=$(cat $refBackupList)
+    else
+        echo "Invalid path for backup reference list file."
+        exit 3
+    fi
     # List all installed apps
-    for app in $(ls $appsPath/$appStore)
+    for app in $backupList
     do
-        # Stop the app if it was asked
-        if [ "$stopApp" = 'stop' ]; then
-            cd $runtipiPath
-            appStatusCheck=$(docker ps -f name=^/$app"_"$appStore -q)
-            if [ -z "$appStatusCheck" ]; then
-                appOrginalStatus='stopped'
-                echo "App $app is already stopped"
-            else
-                appOrginalStatus='started'
-                echo "Stopping $app"
-                ./runtipi-cli app stop $app:$appStore
+        if [ -d $appsPath/$appStore/$app ]; then
+            echo "Starting backup apps from $appStore appstore."
+            
+            # Stop the app if it was asked
+            if [ "$stopApp" = 'stop' ]; then
+                cd $runtipiPath
+                appStatusCheck=$(docker ps -f name=^/$app"_"$appStore -q)
+                if [ -z "$appStatusCheck" ]; then
+                    appOrginalStatus='stopped'
+                    echo "App $app is already stopped"
+                else
+                    appOrginalStatus='started'
+                    echo "Stopping $app"
+                    ./runtipi-cli app stop $app:$appStore
+                    sleep $sleepDuration
+                fi
+            fi
+
+            # Set destination app path
+            backupAppPath="$backupPath/$appStore/$app"
+            # Create destination directory if doesnt exist
+            if [ ! -d "$backupAppPath" ]; then mkdir -p "$backupAppPath"; fi
+            # Generate archive name
+            backupFileName="$app-$backupType-$(date '+%Y-%m-%d').tar.gz"
+    
+            # Use backup directory as archive file destination
+            archiveCreatingWorkDir="$backupAppPath"
+    
+            # Move to Working Directory for archive creation
+            cd $archiveCreatingWorkDir
+    
+            # Declare source and destination path for directories in archive
+            declare -A app_paths=(
+                ["$appsPath/$appStore/$app"]="app"
+                ["$appsDataPath/$appStore/$app"]="app-data"
+                ["$userConfigsPath/$appStore/$app"]="user-config"
+            )
+    
+            echo "Preparing $app files"
+            tempArchiveDir=$(mktemp -d)
+            for src in "${!app_paths[@]}"; do
+                dest="$tempArchiveDir/${app_paths[$src]}"
+                echo $dest
+                # Ensure the directory exists
+                if [ -d "$src" ]; then
+                    # Create symbolic link for each directory
+                    ln -s "$src" "$dest"
+                elif [ $src = "$userConfigsPath/$appStore/$app" ]; then
+                    : # echo "No user config for $app"
+                else
+                    echo "Directory $src does not exist, skipped."
+                fi
+            done
+    
+            # Creating archive
+            echo "Creating $app archive : $backupFileName"
+            tar -czhf "$backupFileName" -C "$tempArchiveDir" .
+            # Remove temporary Directory
+            echo "Removing temporary files"
+            rm -rf "$tempArchiveDir"
+    
+            # Purge old backups of the same type
+            cd "$backupAppPath"
+            echo "Purging old $backupType backup for $app"
+            ls -t | grep "$app-$backupType-" | tail -n +$((keepLast+1)) | xargs -r rm --
+    
+            # Restart the app if it was asked to be stopped
+            if [ "$stopApp" = 'stop' -a "$appOrginalStatus" = 'started' ]; then
+                cd $runtipiPath
+                echo "Starting $app"
+                ./runtipi-cli app start $app:$appStore
                 sleep $sleepDuration
             fi
-        fi
-
-        echo "Preparing $app backup"
-        # Set destination app path
-        backupAppPath="$backupPath/$appStore/$app"
-        # Create destination directory if doesnt exist
-        if [ ! -d "$backupAppPath" ]; then mkdir -p "$backupAppPath"; fi
-        # Generate archive name
-        backupFileName="$app-$backupType-$(date '+%Y-%m-%d').tar.gz"
-
-        # Set archive archive destination to the backup directory
-        archiveCreatingWorkDir="$backupAppPath"
-
-        # Move to Working Directory for archive creation
-        cd $archiveCreatingWorkDir
-
-        # Declare source and destination path for directories in archive
-        declare -A app_paths=(
-            ["$appsPath/$appStore/$app"]="app"
-            ["$appsDataPath/$appStore/$app"]="app-data"
-            ["$userConfigsPath/$appStore/$app"]="user-config"
-        )
-
-        echo "Preparing $app files"
-        tempArchiveDir=$(mktemp -d)
-        for src in "${!app_paths[@]}"; do
-            dest="$tempArchiveDir/${app_paths[$src]}"
-            echo $dest
-            # Ensure the directory exists
-            if [ -d "$src" ]; then
-                # Create symbolic link for each directory
-                ln -s "$src" "$dest"
-            else
-                echo "Directory $src does not exist, skipped."
-            fi
-        done
-
-        # Creating archive
-        echo "Creating $app archive : $backupFileName"
-        tar -czhf "$backupFileName" -C "$tempArchiveDir" .
-        # Remove temporary Directory
-        echo "Removing temporary files"
-        rm -rf "$tempArchiveDir"
-
-        # Purge old backups of the same type
-        cd "$backupAppPath"
-        echo "Purging old $backupType backup for $app"
-        ls -t | grep "$app-$backupType-" | tail -n +$((keepLast+1)) | xargs -r rm --
-
-        # Restart the app if it was asked to be stopped
-        if [ "$stopApp" = 'stop' -a "$appOrginalStatus" = 'started' ]; then
-            cd $runtipiPath
-            echo "Starting $app"
-            ./runtipi-cli app start $app:$appStore
-            sleep $sleepDuration
         fi
     done
 done
@@ -175,10 +201,10 @@ done
 
 The script takes 3 arguments:
 
-| Accepted Values            | Description                                                                                                        | Default | Required |
-| -------------------------- | ------------------------------------------------------------------------------------------------------------------ | ------- | -------- |
-| `monthly`,`weekly`,`daily` | Set the name of the final backup, for example if you use `daily` the backup name will be `myapp-daily-date.tar.gz` | `daily` | no       |
-| `stop`,`ignore`            | Stop the app before backing up or backup anyway.                                                                   | `stop`  | no       |
+| Accepted Values                      | Description                                                                                                        | Default | Required |
+| ------------------------------------ | ------------------------------------------------------------------------------------------------------------------ | ------- | -------- |
+| `yearly`, `monthly`,`weekly`,`daily` | Set the name of the final backup, for example if you use `daily` the backup name will be `myapp-daily-date.tar.gz` | `daily` | no       |
+| `stop`,`ignore`                      | Stop the app before backing up or backup anyway.                                                                   | `stop`  | no       |
 
 The script also allows you to change for how long you want to keep backups, this can be configured by chaning the following values:
 
@@ -195,6 +221,9 @@ Each number indicates the retention period for the backup, specifying how many c
   Make sure to change the `runtipiPath` in the script to point to your actual
   Runtipi path.
 </Callout>
+
+Optionnaly, you can restrict the apps to backup with a list:
+Edit the `backupListPath` in the script with a path to a file describing what apps you want to backup, each app id in a new line.
 
 ### Make the script executable
 
