--- a/src/content/docs/guides/auto-backup-apps.mdx
+++ b/src/content/docs/guides/auto-backup-apps.mdx
@@ -24,7 +24,7 @@ called `backup-apps.sh` and paste the following code:
 #!/bin/bash
 #
 # Usage: ./backup_runtipi_apps.sh [daily|weekly|monthly|yearly] [stop|ignore]
-# Default parameters are daily stop
+# Default parameters are "daily stop"
  
 # Specify your runtipi base path
 runtipiPath=""
@@ -206,7 +206,7 @@ The script takes 3 arguments:
 | `monthly`,`weekly`,`daily` | Set the name of the final backup, for example if you use `daily` the backup name will be `myapp-daily-date.tar.gz` | `daily` | no       |
 | `stop`,`ignore`            | Stop the app before backing up or backup anyway.                                                                   | `stop`  | no       |
 
-### Manage retention
+#### Manage retention
 The script allows you to change for how long you want to keep backups, this can be configured by chaning the following values:
 
 ```bash
@@ -217,7 +217,7 @@ monthlyRetention=3
 
 Each number indicates the retention period for the backup, specifying how many cycles it should be kept before deletion. For instance, a daily backup will be deleted after 3 days, while a monthly backup will be deleted after 3 months etc.
 
-### Apps selection
+#### Apps selection
 You can restrict the apps to backup with a list:
 - In the script, edit the `backupListPath` 
 - Enter the path to a file describing what apps you want to backup, each app id in a new line.
