--- a/src/content/docs/guides/auto-backup-apps.mdx
+++ b/src/content/docs/guides/auto-backup-apps.mdx
@@ -5,8 +5,6 @@ import { Steps, Callout } from "nextra/components";
 In this guide we will show you how to automate backing up all your apps every week, month or day using Runtipi's
 new backup feature.
 
-Thanks a lot to [Lancelot-Enguerrand](https://github.com/Lancelot-Enguerrand) for putting this script together.
-
 <Callout type="warning">
   This script requires Runtipi version `v4.0.0` or above.
 </Callout>
@@ -28,10 +26,10 @@ called `backup-apps.sh` and paste the following code:
  
 # Specify your runtipi base path
 runtipiPath=""
- 
+
 # Specify path to you backup reference list (optional)
 backupListPath=""
- 
+
 # Storage path for the Apps
 backupPath="$runtipiPath/backups"
 
@@ -52,8 +50,8 @@ userConfigsPath="$runtipiPath/user-config"
 # Define the temporary directory for the archive creation
 archiveCreatingWorkDir="/tmp"
 
-# App status - Set defaut value to started
-appOrginalStatus='started'
+# App status - Set default value to started
+appOriginalStatus='started'
 
 # Check for runtipi path value
 if [ -z "$runtipiPath" ]; then
@@ -65,7 +63,7 @@ else
     echo "Runtipi path not found : $runtipiPath"
     exit 1
 fi
- 
+
 # Default Parameters
 backupTypeDefaultValue='daily'
 stopAppDefaultValue='stop'
@@ -127,10 +125,10 @@ do
                 cd $runtipiPath
                 appStatusCheck=$(docker ps -f name=^/$app"_"$appStore -q)
                 if [ -z "$appStatusCheck" ]; then
-                    appOrginalStatus='stopped'
+                    appOriginalStatus='stopped'
                     echo "App $app is already stopped"
                 else
-                    appOrginalStatus='started'
+                    appOriginalStatus='started'
                     echo "Stopping $app"
                     ./runtipi-cli app stop $app:$appStore
                     sleep $sleepDuration
@@ -146,17 +144,17 @@ do
     
             # Use backup directory as archive file destination
             archiveCreatingWorkDir="$backupAppPath"
-    
+
             # Move to Working Directory for archive creation
             cd $archiveCreatingWorkDir
-    
+
             # Declare source and destination path for directories in archive
             declare -A app_paths=(
                 ["$appsPath/$appStore/$app"]="app"
                 ["$appsDataPath/$appStore/$app"]="app-data"
                 ["$userConfigsPath/$appStore/$app"]="user-config"
             )
-    
+
             echo "Preparing $app files"
             tempArchiveDir=$(mktemp -d)
             for src in "${!app_paths[@]}"; do
@@ -172,21 +170,21 @@ do
                     echo "Directory $src does not exist, skipped."
                 fi
             done
-    
+
             # Creating archive
             echo "Creating $app archive : $backupFileName"
             tar -czhf "$backupFileName" -C "$tempArchiveDir" .
             # Remove temporary Directory
             echo "Removing temporary files"
             rm -rf "$tempArchiveDir"
-    
+
             # Purge old backups of the same type
             cd "$backupAppPath"
             echo "Purging old $backupType backup for $app"
             ls -t | grep "$app-$backupType-" | tail -n +$((keepLast+1)) | xargs -r rm --
     
             # Restart the app if it was asked to be stopped
-            if [ "$stopApp" = 'stop' -a "$appOrginalStatus" = 'started' ]; then
+            if [ "$stopApp" = 'stop' -a "$appOriginalStatus" = 'started' ]; then
                 cd $runtipiPath
                 echo "Starting $app"
                 ./runtipi-cli app start $app:$appStore
