fix: add callout import in config-json.mdx

--- a/src/content/docs/reference/config-json.mdx
+++ b/src/content/docs/reference/config-json.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components';
+
 # Details of all options available in `config.json`
 
 When adding a new app to runtipi, you need to create a `config.json` file in the app's folder. This file contains all the information needed to run the app. Below you can find all the options available in the `config.json` file.
